<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="11dp"
                app:cardElevation="11dp">

                <LinearLayout
                    android:layout_width="371dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:backgroundTint="#DEE8F8"
                        app:cardCornerRadius="11dp">

                        <ImageView
                            android:id="@+id/jobImgView"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:contentDescription="@string/todo"
                            android:padding="10dp"
                            android:src="@drawable/outline_business_center_24"
                            tools:ignore="ImageContrastCheck"
                            />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="260dp"
                            android:layout_height="44dp"
                            android:layout_weight="1"
                            android:text="@string/_22"
                            android:textAlignment="textEnd"
                            android:textColor="@color/dark_blue"
                            android:textSize="40sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="260dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/posted_jobs"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:ignore="RtlCompat" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="11dp"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="371dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FBEBE9"
                        app:cardCornerRadius="11dp">

                        <ImageView
                            android:id="@+id/application"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:contentDescription="@string/todo"
                            android:padding="10dp"
                            android:src="@drawable/outline_feed_24"
                            tools:ignore="ImageContrastCheck" />

                    </androidx.cardview.widget.CardView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="260dp"
                            android:layout_height="46dp"
                            android:layout_weight="1"
                            android:text="@string/_9382"
                            android:textAlignment="textEnd"
                            android:textColor="@color/Red"
                            android:textSize="40sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="260dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/application"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:ignore="RtlCompat" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="11dp"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="371dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FEF7E9"
                        app:cardCornerRadius="11dp">
                        <ImageView
                            android:id="@+id/messages"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:padding="10dp"
                            android:src="@drawable/outline_message_24"
                            tools:ignore="ImageContrastCheck" />
                    </androidx.cardview.widget.CardView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="260dp"
                            android:layout_height="46dp"
                            android:layout_weight="1"
                            android:text="@string/_74"
                            android:textAlignment="textEnd"
                            android:textColor="#f9ab00"
                            android:textSize="40sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="260dp"
                            android:layout_height="wrap_content"
                            android:text="@string/messages"
                            android:textColor="@color/black"
                            android:gravity="center_vertical"
                            android:textAlignment="viewEnd"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            tools:ignore="RtlCompat" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="11dp"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="371dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#ECF6ED"
                        app:cardCornerRadius="11dp">
                        <ImageView
                            android:id="@+id/shortlist"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:padding="10dp"
                            android:src="@drawable/outline_bookmark_border_24"
                            tools:ignore="ImageContrastCheck" />
                    </androidx.cardview.widget.CardView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="260dp"
                            android:layout_height="46dp"
                            android:layout_weight="1"
                            android:text="@string/_32"
                            android:textAlignment="textEnd"
                            android:textColor="@color/Green"
                            android:textSize="40sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="260dp"
                            android:layout_height="wrap_content"
                            android:text="@string/shortlist"
                            android:textColor="@color/black"
                            android:gravity="center_vertical"
                            android:textAlignment="viewEnd"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            tools:ignore="RtlCompat" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>